--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ apply from: "../scripts/versions.gradle"
 android {
     compileSdkVersion rootProject.compileSdkVersion
     defaultConfig {
-        applicationId "jp.co.soramitsu.fearless"
+        applicationId "io.novafoundation.nova"
         minSdkVersion rootProject.minSdkVersion
         targetSdkVersion rootProject.targetSdkVersion
         versionCode computeVersionCode()
@@ -19,7 +19,7 @@ android {
     }
     signingConfigs {
       ci {
-          storeFile file(System.env.CI_KEYSTORE_PATH ?: "stub")
+          storeFile file("fearless_ci.jks")
           storePassword System.env.CI_KEYSTORE_PASS ?: ""
           keyAlias System.env.CI_KEYSTORE_KEY_ALIAS ?: ""
           keyPassword System.env.CI_KEYSTORE_KEY_PASS ?: ""
