--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,13 +17,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-        cache: gradle
+#     - uses: actions/checkout@v2
+#     - name: set up JDK 11
+#       uses: actions/setup-java@v2
+#       with:
+#         java-version: '11'
+#         distribution: 'adopt'
+#         cache: gradle
 
     - name: Setup Android NDK
       uses: nttld/setup-ndk@v1
@@ -32,8 +32,12 @@ jobs:
 
     - name: Copy NDK 21 folder to NDK 23
       run: |
-        ls /usr/local/lib/android/sdk/
-        ls /usr/local/lib/android/sdk/ndk
+        echo 21.4.7075529
+        ls /usr/local/lib/android/sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/linux-x86_64/bin/
+        echo 22.1.7171670
+        ls /usr/local/lib/android/sdk/ndk/22.1.7171670/toolchains/llvm/prebuilt/linux-x86_64/bin/
+        echo 23.0.7599858
+        ls /usr/local/lib/android/sdk/ndk/23.0.7599858/toolchains/llvm/prebuilt/linux-x86_64/bin/
 
 #     - name: Grant execute permission for gradlew
 #       run: chmod +x gradlew
