--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,15 +31,9 @@ jobs:
         ndk-version: r21d
 
     - name: Copy NDK 21 folder to NDK 23
-      run: |
-        echo 21.4.7075529
-        ls /usr/local/lib/android/sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/linux-x86_64/bin/
-        echo 22.1.7171670
-        ls /usr/local/lib/android/sdk/ndk/22.1.7171670/toolchains/llvm/prebuilt/linux-x86_64/bin/
-        echo 23.0.7599858
-        ls /usr/local/lib/android/sdk/ndk/23.0.7599858/toolchains/llvm/prebuilt/linux-x86_64/bin/
+      run: cp -RT /usr/local/lib/android/sdk/ndk/21.4.7075529 /usr/local/lib/android/sdk/ndk/23.0.7599858
 
-#     - name: Grant execute permission for gradlew
-#       run: chmod +x gradlew
-#     - name: Build with Gradle
-#       run: ./gradlew build
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew build
