--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,7 +33,10 @@ jobs:
     - name: Rename NDK 21 folder to NDK 23
       run: mv /usr/local/lib/android/sdk/ndk/21.4.7075529 /usr/local/lib/android/sdk/ndk/23.0.7599858
 
+    - name: Ls strip
+      run: ls /usr/local/lib/android/sdk/ndk/23.0.7599858/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android-strip
+      
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build --stacktrace
