--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,7 +31,11 @@ jobs:
         ndk-version: r21d
 
     - name: Rename NDK 21 folder to NDK 23
-      run: mv /usr/local/lib/android/sdk/ndk/21.4.7075529 /usr/local/lib/android/sdk/ndk/23.0.7599858
+      run: |
+        ls /usr/local/lib/android/sdk/ndk
+        ls /usr/local/lib/android/sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android-strip
+        mv /usr/local/lib/android/sdk/ndk/21.4.7075529 /usr/local/lib/android/sdk/ndk/23.0.7599858
+        ls /usr/local/lib/android/sdk/ndk/23.0.7599858/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android-strip
 
     - name: Ls strip
       run: ls /usr/local/lib/android/sdk/ndk/23.0.7599858/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android-strip
