--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -4,9 +4,9 @@ env:
   MOONPAY_TEST_SECRET: ${{ secrets.MOONPAY_TEST_SECRET }}
   SUBSCAN_API_KEY: ${{ secrets.SUBSCAN_API_KEY }}
   MOONPAY_PRODUCTION_SECRET: ${{ secrets.MOONPAY_PRODUCTION_SECRET }}
-  CI_KEYSTORE_PASS: ${{ CI_KEYSTORE_PASS }}
-  CI_KEYSTORE_KEY_ALIAS: ${{ CI_KEYSTORE_KEY_ALIAS }}
-  CI_KEYSTORE_KEY_PASS: ${{ CI_KEYSTORE_KEY_PASS }}
+  CI_KEYSTORE_PASS: ${{ secrets.CI_KEYSTORE_PASS }}
+  CI_KEYSTORE_KEY_ALIAS: ${{ secrets.CI_KEYSTORE_KEY_ALIAS }}
+  CI_KEYSTORE_KEY_PASS: ${{ secrets.CI_KEYSTORE_KEY_PASS }}
   CI_KEYSTORE_PATH: app/keystore
 
 on:
