--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
     }
     signingConfigs {
       ci {
-          storeFile file(System.env.CI_KEYSTORE_PATH ?: "stub")
+          storeFile file("keystore/fearless_ci.jks")
           storePassword System.env.CI_KEYSTORE_PASS ?: ""
           keyAlias System.env.CI_KEYSTORE_KEY_ALIAS ?: ""
           keyPassword System.env.CI_KEYSTORE_KEY_PASS ?: ""
