--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -44,4 +44,4 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build --stacktrace
+      run: ./gradlew assembleDebug --stacktrace
