--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -35,13 +35,15 @@ jobs:
 
     - name: Rename NDK 21 folder to NDK 23
       run: |
-        ls /usr/local/lib/android/sdk/ndk
-        ls /usr/local/lib/android/sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android-strip
         rm -rf /usr/local/lib/android/sdk/ndk/23.0.7599858
         mv /usr/local/lib/android/sdk/ndk/21.4.7075529 /usr/local/lib/android/sdk/ndk/23.0.7599858
-        ls /usr/local/lib/android/sdk/ndk/23.0.7599858/toolchains/llvm/prebuilt/linux-x86_64/bin/
       
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
     - name: Build with Gradle
-      run: ./gradlew assembleDebug --stacktrace
+      run: ./gradlew assembleDebug
+
+    - name: Run tests 
+      run: ./gradlew runTest
+
