Rollback release chains url change

--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -23,7 +23,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
-//            buildConfigField "String", "CHAINS_URL", "\"https://raw.githubusercontent.com/fearlesswallet/fearless-utils/master/chains/chains.json\""
+            buildConfigField "String", "CHAINS_URL", "\"https://raw.githubusercontent.com/fearlesswallet/fearless-utils/master/chains/chains.json\""
         }
     }
 
