Finish acala crowdloan

--- a/feature-crowdloan-impl/build.gradle
+++ b/feature-crowdloan-impl/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply from: '../tests.gradle'
+apply from: '../scripts/secrets.gradle'
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -14,9 +15,11 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String", "KARURA_NOVA_REFERRAL", "\"0x9642d0db9f3b301b44df74b63b0b930011e3f52154c5ca24b4dc67b3c7322f15\""
-        buildConfigField "String", "ACALA_NOVA_REFERRAL", "\"0x9642d0db9f3b301b44df74b63b0b930011e3f52154c5ca24b4dc67b3c7322f15\"" // TODO fill with actual acala code
+        buildConfigField "String", "ACALA_NOVA_REFERRAL", "\"0xbcb330a49b5766dcd63fff92cf95243ec2a29c4131f19155724095e5cfd5197a\"" // TODO fill with actual acala code
         buildConfigField "String", "BIFROST_NOVA_REFERRAL", "\"FRLS69\""
         buildConfigField "String", "BIFROST_TERMS_LINKS", "\"https://docs.google.com/document/d/1PDpgHnIcAmaa7dEFusmLYgjlvAbk2VKtMd755bdEsf4\""
+
+        buildConfigField "String", "ACALA_AUTH_TOKEN", readSecret("ACALA_AUTH_TOKEN")
     }
 
     buildTypes {
