--- a/feature-crowdloan-impl/build.gradle
+++ b/feature-crowdloan-impl/build.gradle
@@ -20,6 +20,7 @@ android {
         buildConfigField "String", "BIFROST_TERMS_LINKS", "\"https://docs.google.com/document/d/1PDpgHnIcAmaa7dEFusmLYgjlvAbk2VKtMd755bdEsf4\""
 
         buildConfigField "String", "ACALA_AUTH_TOKEN", readSecret("ACALA_AUTH_TOKEN")
+        buildConfigField "String", "MOONBEAM_AUTH_TOKEN", readSecret("MOONBEAM_AUTH_TOKEN")
     }
 
     buildTypes {
