--- a/feature-crowdloan-impl/build.gradle
+++ b/feature-crowdloan-impl/build.gradle
@@ -19,7 +19,9 @@ android {
         buildConfigField "String", "BIFROST_NOVA_REFERRAL", "\"FRLS69\""
         buildConfigField "String", "BIFROST_TERMS_LINKS", "\"https://docs.google.com/document/d/1PDpgHnIcAmaa7dEFusmLYgjlvAbk2VKtMd755bdEsf4\""
 
-        buildConfigField "String", "ACALA_AUTH_TOKEN", readSecret("ACALA_AUTH_TOKEN")
+        buildConfigField "String", "ACALA_TEST_AUTH_TOKEN", readSecret("ACALA_TEST_AUTH_TOKEN")
+        buildConfigField "String", "ACALA_PROD_AUTH_TOKEN", readSecret("ACALA_PROD_AUTH_TOKEN")
+
         buildConfigField "String", "MOONBEAM_TEST_AUTH_TOKEN", readSecret("MOONBEAM_TEST_AUTH_TOKEN")
     }
 
