--- a/scripts/secrets.gradle
+++ b/scripts/secrets.gradle
@@ -6,12 +6,22 @@ if (localPropertiesFile.exists()) {
     localProperties.load(localPropertiesFile.newDataInputStream())
 }
 
-ext.readSecret = { secretName ->
+ext.readSecretOrNull = { secretName ->
     def localPropSecret = localProperties.getProperty(secretName)
 
     def secret = (localPropSecret != null) ? localPropSecret : System.getenv(secretName)
 
+    if (secret == null) return null
+
     return maybeWrapInQuotes(secret)
+}
+
+ext.readSecret = { secretName ->
+    return readSecretOrNull(secretName) ?: secretNotFound(secretName)
+}
+
+private static def secretNotFound(secretName) {
+    throw new NoSuchElementException("No secret ${secretName} found")
 }
 
 static def maybeWrapInQuotes(content){
