--- a/.github/workflows/push_develop.yml
+++ b/.github/workflows/push_develop.yml
@@ -1,14 +1,14 @@
-name: Develop with deploy debug app
+name: Build test and deploy develop apk
 
-on:
-  push:
-    branches: [develop]
+on: [pull_request]
+  # push:
+  #   branches: [develop]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/nova-wallet/build_tools:pr-2
+      image: ghcr.io/nova-wallet/build_tools:pr-3
       credentials:
         username: stepanLav
         password: ${{ secrets.GITHUB_TOKEN }}
@@ -27,13 +27,46 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Run tests
-        run: ./gradlew runTest
-
       - name: Build with Gradle
         run: ./gradlew assembleDebug
 
+      - name: Run tests
+        run: ./gradlew runTest
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: apk
+          path: app/
+
+  upload:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Download built artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: apk
+          path: app
+
       - name: Upload artifact to Firebase App Distribution
+        id: upload
+        continue-on-error: true
+        uses: wzieba/Firebase-Distribution-Github-Action@v1
+        with:
+          appId: ${{ secrets.ANDROID_DEV_FIREBASE_APP_ID }}
+          token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
+          groups: dev-team
+          file: app/build/outputs/apk/debug/app-debug.apk
+
+      - name: Sleep for 60 seconds
+        uses: whatnick/wait-action@master
+        if: steps.upload.outcome=='failure'
+        with:
+          time: '60s'
+
+      - name: Retry upload artifacts
+        if: steps.upload.outcome=='failure'
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
           appId: ${{ secrets.ANDROID_DEV_FIREBASE_APP_ID }}
