--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,12 +1,12 @@
 name: Pull request
 
-on: [pull_request]
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/nova-wallet/build_tools:pr-2
+      image: ghcr.io/nova-wallet/build_tools:pr-3
       credentials:
         username: stepanLav
         password: ${{ secrets.GITHUB_TOKEN }}
