Migrate choose transfer amount screen to newer components

--- a/feature-wallet-api/build.gradle
+++ b/feature-wallet-api/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation androidDep
     implementation constraintDep
 
+    implementation lifeCycleKtxDep
+
     api project(':core-api')
     api project(':core-db')
 
