--- a/.github/workflows/push_develop.yml
+++ b/.github/workflows/push_develop.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: apk
-          path: app/
+          path: app/build/outputs/apk/debug/
 
   upload:
     runs-on: ubuntu-latest
@@ -57,7 +57,7 @@ jobs:
           appId: ${{ secrets.ANDROID_DEV_FIREBASE_APP_ID }}
           token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
           groups: dev-team
-          file: app/build/outputs/apk/debug/app-debug.apk
+          file: app/app-debug.apk
 
       - name: Sleep for 60 seconds
         uses: whatnick/wait-action@master
@@ -72,4 +72,4 @@ jobs:
           appId: ${{ secrets.ANDROID_DEV_FIREBASE_APP_ID }}
           token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
           groups: dev-team
-          file: app/build/outputs/apk/debug/app-debug.apk
+          file: app/app-debug.apk
