--- a/common/build.gradle
+++ b/common/build.gradle
@@ -17,6 +17,8 @@ android {
         buildConfigField "String", "TERMS_URL", "\"https://novawallet.io/terms\""
         buildConfigField "String", "GITHUB_URL", "\"https://github.com/nova-wallet\""
         buildConfigField "String", "TELEGRAM_URL", "\"https://t.me/novawallet\""
+        buildConfigField "String", "TWITTER_URL", "\"https://twitter.com/novawalletapp\""
+        buildConfigField "String", "RATE_URL", "\"market://details?id=${rootProject.applicationId}\""
         buildConfigField "String", "EMAIL", "\"support@novawallet.io\""
 
         buildConfigField "String", "TWITTER_ACCOUNT_TEMPLATE", "\"https://twitter.com/%s\""
