--- a/.github/workflows/push_develop.yml
+++ b/.github/workflows/push_develop.yml
@@ -1,8 +1,8 @@
 name: Build test and deploy develop apk
 
-on: [pull_request]
-  # push:
-  #   branches: [develop]
+on:
+  push:
+    branches: [develop]
 
 jobs:
   build:
