--- a/.github/workflows/push-develop.yml
+++ b/.github/workflows/push-develop.yml
@@ -44,6 +44,6 @@ jobs:
         with:
           appId: ${{ secrets.ANDROID_DEV_FIREBASE_APP_ID }}
           token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
-          releaseNotes: $(git rev-parse --short HEAD) ${{ github.event.head_commit.message }}
+          releaseNotes: "$(git log -1 --pretty=short)"
           groups: dev-team
           file: app/build/outputs/apk/debug/app-debug.apk
