--- a/.github/workflows/push_develop.yml
+++ b/.github/workflows/push_develop.yml
@@ -33,8 +33,8 @@ jobs:
           gradlePath: app/build.gradle
           versionCode: ${{github.run_number}}
 
-      # - name: Run tests
-      #   run: ./gradlew runTest
+      - name: Run tests
+        run: ./gradlew runTest
 
       - name: Build with Gradle
         run: ./gradlew assembleDebug
@@ -49,16 +49,12 @@ jobs:
     needs: build
 
     steps:
-      - uses: actions/checkout@v2
 
       - name: Download built artifact
         uses: actions/download-artifact@v2
         with:
           name: apk
           path: app
-
-      - name: Create Release notes
-        run: echo "RELEASE_NOTES=$(git log -1 --pretty=short)" >> $GITHUB_ENV
 
       - name: Upload artifact to Firebase App Distribution
         id: upload
@@ -67,7 +63,7 @@ jobs:
         with:
           appId: ${{ secrets.ANDROID_DEV_FIREBASE_APP_ID }}
           token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
-          releaseNotes: ${{ env.RELEASE_NOTES }}
+          releaseNotes: ${{ github.event.head_commit.message }}
           groups: dev-team
           file: app/app-debug.apk
 
@@ -83,6 +79,6 @@ jobs:
         with:
           appId: ${{ secrets.ANDROID_DEV_FIREBASE_APP_ID }}
           token: ${{ secrets.ANDROID_DEV_FIREBASE_TOKEN }}
-          releaseNotes: ${{ env.RELEASE_NOTES }}
+          releaseNotes: ${{ github.event.head_commit.message }}
           groups: dev-team
           file: app/app-debug.apk
