--- a/.github/workflows/push_develop.yml
+++ b/.github/workflows/push_develop.yml
@@ -49,7 +49,7 @@ jobs:
     needs: build
 
     steps:
-
+      - uses: actions/checkout@v2
       - name: Download built artifact
         uses: actions/download-artifact@v2
         with:
