--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,8 @@ buildscript {
 
         coilVersion = '1.2.1'
 
+        flexBoxVersion = "3.0.0"
+
         coilDep = "io.coil-kt:coil:$coilVersion"
         coilSvg = "io.coil-kt:coil-svg:$coilVersion"
 
@@ -80,6 +82,8 @@ buildscript {
         recyclerViewDep = "androidx.recyclerview:recyclerview:$supportVersion"
         constraintDep = "androidx.constraintlayout:constraintlayout:$constraintVersion"
         materialDep = "com.google.android.material:material:$supportVersion"
+
+        flexBoxDep = "com.google.android.flexbox:flexbox:$flexBoxVersion"
 
         daggerDep = "com.google.dagger:dagger:$daggerVersion"
         daggerKapt = "com.google.dagger:dagger-compiler:$daggerVersion"
