Choose import type bottom sheet

--- a/feature-account-api/build.gradle
+++ b/feature-account-api/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation androidDep
     implementation materialDep
 
+    implementation constraintDep
+
     api fearlessLibDep
 
     api project(':core-api')
