--- a/common/build.gradle
+++ b/common/build.gradle
@@ -91,7 +91,7 @@ dependencies {
 
     implementation wsDep
 
-    implementation insetterDep
+    api insetterDep
 
     api coilDep
     api coilSvg
