Basic web3 injection

--- a/feature-dapp-impl/build.gradle
+++ b/feature-dapp-impl/build.gradle
@@ -51,6 +51,8 @@ dependencies {
 
     implementation coroutinesDep
 
+    implementation gsonDep
+
     implementation daggerDep
     kapt daggerKapt
 
