Add suffix for release (market) version

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
+
+            versionNameSuffix '-market'
+            applicationIdSuffix '.market'
         }
         releaseGithub {
             initWith buildTypes.release
