Add dapps shimmering

--- a/feature-dapp-impl/build.gradle
+++ b/feature-dapp-impl/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     implementation materialDep
     implementation constraintDep
 
+    implementation shimmerDep
+
     implementation coroutinesDep
 
     implementation gsonDep
