--- a/feature-dapp-impl/build.gradle
+++ b/feature-dapp-impl/build.gradle
@@ -13,12 +13,15 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
+        buildConfigField "String", "DAPP_METADATAS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/dapps/dapps_dev.json\""
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            buildConfigField "String", "DAPP_METADATAS_URL", "\"https://raw.githubusercontent.com/nova-wallet/nova-utils/master/dapps/dapps.json\""
         }
     }
 
@@ -63,6 +66,8 @@ dependencies {
     implementation materialDep
     implementation constraintDep
 
+    implementation shimmerDep
+
     implementation coroutinesDep
 
     implementation gsonDep
@@ -72,6 +77,8 @@ dependencies {
 
     implementation lifecycleDep
     kapt lifecycleKapt
+
+    implementation retrofitDep
 
     testImplementation jUnitDep
     testImplementation mockitoDep
