--- a/.github/workflows/push_develop.yml
+++ b/.github/workflows/push_develop.yml
@@ -1,8 +1,9 @@
 name: Build test and deploy develop apk
 
 on:
-  push:
-    branches: [develop]
+  [pull_request]
+  # push:
+  #   branches: [develop]
 
 jobs:
   build:
