--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 
         ktlintPinterestVersion = '0.40.0'
 
+        recyclerVersion = "1.2.1"
         supportVersion = '1.1.0'
         cardViewVersion = '1.0.0'
         constraintVersion = '1.1.3'
@@ -79,7 +80,7 @@ buildscript {
 
         androidDep = "androidx.appcompat:appcompat:$supportVersion"
         cardViewDep = "androidx.cardview:cardview:$cardViewVersion"
-        recyclerViewDep = "androidx.recyclerview:recyclerview:$supportVersion"
+        recyclerViewDep = "androidx.recyclerview:recyclerview:$recyclerVersion"
         constraintDep = "androidx.constraintlayout:constraintlayout:$constraintVersion"
         materialDep = "com.google.android.material:material:$supportVersion"
 
