--- a/feature-dapp-api/build.gradle
+++ b/feature-dapp-api/build.gradle
@@ -26,6 +26,10 @@ android {
 
 dependencies {
     implementation project(':feature-account-api')
+    implementation project(':common')
 
     implementation coroutinesDep
+
+    testImplementation jUnitDep
+    testImplementation mockitoDep
 }
