Nft module skeleton

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,3 +13,5 @@ include ':feature-account-impl'
 include ':feature-dapp-api'
 include ':feature-dapp-impl'
 include ':feature-assets'
+include ':feature-nft-api'
+include ':feature-nft-impl'
