--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,6 +128,9 @@ dependencies {
     implementation project(':feature-dapp-api')
     implementation project(':feature-dapp-impl')
 
+    implementation project(':feature-nft-api')
+    implementation project(':feature-nft-impl')
+
     implementation project(':feature-assets')
 
     implementation kotlinDep
