--- a/feature-nft-impl/build.gradle
+++ b/feature-nft-impl/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation liveDataKtxDep
     implementation lifeCycleKtxDep
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
     implementation daggerDep
     kapt daggerKapt
 
